--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
+    --options-row-padding-size: 20px;
+
+    --elements-border-color: palevioletred;
+    --danger-color: red;
+    --button-click-color: darkgrey;
+    --solid-button-line-color: white;
+    --solid-button-primary-color: brown;
+
     --search-bar-width: 800px;
+    --search-bar-height: 70px;
+    --big-button-width: calc(var(--search-bar-width)*0.3);
+    --big-button-height: 50px;
+    --big-button-font-size: 1.25em;
+
+    --small-button-font-size: 0.95em;
+
 }
 
 .items {
