--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 1000px;
-    height: 200px;
-    background-color: antiquewhite;
+    background-color: rgb(233, 219, 202);
     padding-left: 30px;
     margin: auto;
 }
@@ -16,5 +15,16 @@
 }
 
 button {
-    width: var(--search-bar-width);
+    background-color: var(--solid-button-primary-color);
+    width: var(--big-button-width);
+    height: var(--big-button-height);
+    margin-bottom: calc(var(--big-button-height)/3);
+    font-size: var(--big-button-font-size);
+    border-radius: 10px;
+    color: var(--solid-button-line-color);
+    padding: 0.25em 1em;
+}
+
+button:active {
+    background-color: var(--button-click-color);
 }
