move vars to app.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,28 +1,11 @@
 .App {
-    --options-row-padding-size: 20px;
-    --card-common-padding-size: 30px;
-
-    --secondary-color: rgb(233, 233, 96);
-    --elements-border-color: palevioletred;
-    --danger-color: red;
-    --button-click-color: darkgrey;
-    --solid-button-line-color: white;
-    --solid-button-primary-color: brown;
-
-    --card-width: 1000px;
-    --search-bar-width: 800px;
-    --search-bar-height: 70px;
-    --big-button-width: calc(var(--search-bar-width)*0.3);
-    --big-button-height: 50px;
-    --big-button-font-size: 1.25em;
-
-    --small-button-font-size: 0.95em;
-
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .items {
     display: flex;
     flex-direction: column-reverse;
-    width: 100%;
     padding-top: 10px;
 }
