--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,31 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    --options-row-padding-size: 20px;
+    --card-common-padding-size: 30px;
+
+    --primary-color: rgb(233, 219, 202);
+    --secondary-color: rgb(233, 233, 96);
+    --elements-border-color: palevioletred;
+    --danger-color: red;
+    --button-click-color: darkgrey;
+    --solid-button-line-color: white;
+    --solid-button-primary-color: brown;
+
+    --card-width: 1000px;
+    --search-bar-width: 800px;
+    --search-bar-height: 70px;
+    --big-button-width: calc(var(--search-bar-width)*0.3);
+    --big-button-height: 50px;
+    --big-button-font-size: 1.25em;
+
+    --small-button-font-size: 0.95em;
+
+    
 }
 
 code {
