--- a/frontend/src/components/ItemCard/ItemCard.module.css
+++ b/frontend/src/components/ItemCard/ItemCard.module.css
@@ -1,15 +1,15 @@
 .card_container {
     display: flex;
     flex-direction: column;
-    width: 1000px;
+    width: var(--card-width);
     margin: auto;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    width: 1000px;
-    background-color: rgb(233, 219, 202);
+    width: var(--card-width);
+    background-color: var(--primary-color);
     margin: auto;
 }
 
