--- a/frontend/src/components/AddedItems/AddedItemCard/AddedItemCard.module.css
+++ b/frontend/src/components/AddedItems/AddedItemCard/AddedItemCard.module.css
@@ -17,6 +17,14 @@
     padding-left: var(--card-common-padding-size);
 }
 
+.controls {
+    margin: 10px 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 .category_selector {
     display: flex;
     flex-direction: row;
@@ -27,10 +35,10 @@
 
 button {
     background-color: var(--solid-button-primary-color);
-    width: var(--big-button-width);
-    height: var(--big-button-height);
+    width: 120px;
+    height: 40px;
     margin-bottom: calc(var(--big-button-height)/3);
-    font-size: var(--big-button-font-size);
+    font-size: calc(var(--small-button-font-size));
     border-radius: 10px;
     color: var(--solid-button-line-color);
     padding: 0.25em 1em;
