pass item to PriceBar instead of prices, add quantity parameter

--- a/frontend/src/components/AddedItems/AddedItemCard/AddedItemCard.module.css
+++ b/frontend/src/components/AddedItems/AddedItemCard/AddedItemCard.module.css
@@ -21,8 +21,9 @@
     margin: 10px 0;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
 }
 
 .category_selector {
